Fix issue with visible scroll bars on IE

--- a/css/layout-css/small-card-style.upload.css
+++ b/css/layout-css/small-card-style.upload.css
@@ -659,7 +659,8 @@
   width: 100%;
   height: 0;
   z-index: 12;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: all 0.2s ease-out;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
