--- a/css/layout-css/small-h-card-style.upload.css
+++ b/css/layout-css/small-h-card-style.upload.css
@@ -179,7 +179,8 @@
   height: 0;
   width: 100%;
   z-index: 12;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: all 0.2s ease-out;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
